# interview-platform-engineering

./: .gitignore  README.md  docker-compose.yaml
api/: pyproject.toml
api/api/: main.py
api/tests/: test_main.py
ui/: package-lock.json  package.json
ui/src/: App.tsx  router.tsx
ui/src/Components/: answer.tsx  question.tsx
